--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "LGPL-3.0",
     "autoload": {
         "psr-0" : {
-            "OpenPayU" : ""
+            "OpenPayU" : "OpenPayU"
         }
     }
 }
