--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "pasib/openpayu",
-    "description": "Composer version of OpenPayU library",
+    "name": "AlfredBroda/openpayu",
+    "description": "Namespaced Composer version of OpenPayU library",
     "license": "LGPL-3.0",
     "autoload": {
         "psr-0" : {
-            "OpenPayU" : "OpenPayU"
+            "OpenPayU" : "PayU"
         }
     }
 }
